[package]

name = "sass-sys"
version = "0.0.6"
authors = ["Marius Seritan <github@seritan.net>"]
links = "sass"
build = "build.rs"
keywords = ["sass", "ffi"]
description = "Low level binding for the Sass library"
license = "MIT"
readme = "README.md"
repository = "https://github.com/compass-rs/sass-sys.git"
homepage = "https://github.com/compass-rs/sass-sys"
documentation = "http://compass-rs.github.io/sass-sys/"

[build-dependencies]
pkg-config = "*"
